make sure real reservations are higher z-index than admin/blackouts

--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -37,21 +37,22 @@ body .unit {
   height:30px;
   position:absolute;
   bottom: 0;
+  z-index: 20;
 }
 
 .unit.ui-draggable-dragging {
   z-index:99999;
 }
 
-.unit.blackout, .unit.admin {
+.unit.blackout, 
+.unit.admin {
   display:inline-block;
   height:71px;
   opacity:0.5;
-  position:absolute;
   top:0px;
   width:110px;
   z-index: 10;
-  border-radius: 5px 5px 0 0;
+  border-radius: 3px 3px 0 0;
 }
 
 .blackout {
